# jpeg8d-cmake

./: .gitattributes  .travis.yml  CMakeLists.txt  appveyor.yml  cmake-flags.h.in  empty_test.map  jconfig-cmake.cfg  jpeg-config.cmake.in  jquant1.c  jquant2.c  linux_toolchain.cmake  mingw_toolchain.cmake
jquant2/: CMakeLists.txt
src/: jmorecfg.h  jquant2.c
tools/: cdjpeg.c  cdjpeg.h  example.c  rdbmp.c  rdcolmap.c  rdgif.c  rdppm.c  rdrle.c  rdswitch.c  rdtarga.c  transupp.c  transupp.h  wrbmp.c  wrgif.c  wrppm.c  wrrle.c  wrtarga.c
